--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,3 +29,5 @@ Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
 LazyData: true
 Suggests: testthat
+URL: https://github.com/xmarquez/democracyData
+BugReports: https://github.com/xmarquez/democracyData/issues
