Adds the Ankcar and Fredriksson (2018) and SVMDI (Grundler and Krieger 2018) datasets; fixes REIGN problems.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(download_polity_annual)
 export(download_reign)
 export(download_wgi_voice_and_accountability)
 export(generate_democracy_scores_dataset)
+export(redownload_anckar)
 export(redownload_blm)
 export(redownload_bmr)
 export(redownload_bnr)
@@ -20,6 +21,7 @@ export(redownload_peps)
 export(redownload_pipe)
 export(redownload_polyarchy_dimensions)
 export(redownload_polyarchy_original)
+export(redownload_svmdi)
 export(redownload_uds)
 export(redownload_ulfelder)
 export(redownload_utip)
