--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 data-raw/Adding_and_testing_all_democracy_datasets_cache/
 inst/doc
 cache
+vignettes/articles/Relationships_between_democracy_measures_cache/
