--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -5,5 +5,8 @@ articles:
   articles/Relationships_between_democracy_measures: Relationships_between_democracy_measures.html
   articles/Replicating_and_extending_the_UD_scores: Replicating_and_extending_the_UD_scores.html
   articles/Understanding_the_coverage_of_existing_democracy_indexes: Understanding_the_coverage_of_existing_democracy_indexes.html
-last_built: 2021-05-30T06:14Z
+last_built: 2021-05-30T08:50Z
+urls:
+  reference: https://xmarquez.github.io/democracyData//reference
+  article: https://xmarquez.github.io/democracyData//articles
 
