--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,12 @@ Type: Package
 Title: Access and manipulate most available democracy datasets 
 Version: 0.3.0
 Description: Contains a number of functions to access and manipulate a large number of democracy datasets, many of historical interest. It also contains a number of functions to determine membership of a country in standard membership lists of the state system (according to Gleditsch and Ward, Correlates of War, or Polity).
-Authors@R: person("Xavier", "Marquez", role=c("aut", "cre"),
-  email = "marquez.x@gmail.com")
+Authors@R: 
+    person(given = "Xavier",
+           family = "Marquez",
+           role = c("aut", "cre"),
+           email = "marquez.x@gmail.com",
+           comment = c(ORCID = "0000-0001-7653-9334"))
 License: GPL-3
 Depends:
     R (>= 3.5.0)
@@ -31,7 +35,7 @@ Suggests:
     testthat,
     rmarkdown,
     vdem (>= 0.1.6)
-URL: https://github.com/xmarquez/democracyData
+URL: https://xmarquez.github.io/democracyData/, https://github.com/xmarquez/democracyData
 BugReports: https://github.com/xmarquez/democracyData/issues
 Remotes: 
     xmarquez/vdem
