Changes to namespace (autogenerated)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(download_fh)
 export(download_fh_electoral)
 export(download_fh_full)
 export(download_polity_annual)
-export(download_reign)
 export(download_wgi_voice_and_accountability)
 export(generate_democracy_scores_dataset)
 export(generate_extended_uds)
@@ -20,7 +19,6 @@ export(raterinfo)
 export(redownload_anckar)
 export(redownload_blm)
 export(redownload_bmr)
-export(redownload_bnr)
 export(redownload_bti)
 export(redownload_gwf)
 export(redownload_lied)
@@ -32,6 +30,7 @@ export(redownload_pipe)
 export(redownload_polityIV)
 export(redownload_polyarchy_dimensions)
 export(redownload_polyarchy_original)
+export(redownload_reign)
 export(redownload_svmdi)
 export(redownload_ulfelder)
 export(redownload_utip)
