PKGdown index changes

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -31,12 +31,14 @@ reference:
   - polyarchy
   - polyarchy_dimensions
   - prc_gasiorowski
+  - REIGN
   - svmdi
   - svolik_regime
   - uds_2014
   - ulfelder
   - utip
   - vanhanen
+  - vdem_simple
   - wahman_teorell_hadenius
 - title: "Download_ functions"
   desc: >
