Gitignore changes - ignore some hidden files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ data-raw/Adding_and_testing_all_democracy_datasets_cache/
 inst/doc
 cache
 vignettes/articles/Relationships_between_democracy_measures_cache/
+.Rd2pdf6593
+.Rd2pdf6605
+.Rd2pdf6629
