--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: democracyData
 Type: Package
 Title: Access and Manipulate Most Available Democracy Datasets 
-Version: 0.3.0
+Version: 0.4.0
 Description: Contains a number of functions to access and manipulate a large number of democracy datasets, many of historical interest. It also contains a number of functions to determine membership of a country in standard membership lists of the state system (according to Gleditsch and Ward, Correlates of War, or Polity).
 Authors@R: 
     person(given = "Xavier",
@@ -28,16 +28,13 @@ Imports:
     RefManageR,
     knitr,
     mirt
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: bzip2 
 Suggests: 
     testthat,
-    rmarkdown,
-    vdem (>= 0.1.6)
+    rmarkdown
 URL: https://xmarquez.github.io/democracyData/, https://github.com/xmarquez/democracyData
 BugReports: https://github.com/xmarquez/democracyData/issues
-Remotes: 
-    xmarquez/vdem
