--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,11 @@ Package: democracyData
 Type: Package
 Title: Access and Manipulate Most Available Democracy Datasets 
 Version: 0.4.0
-Description: Contains a number of functions to access and manipulate a large number of democracy datasets, many of historical interest. It also contains a number of functions to determine membership of a country in standard membership lists of the state system (according to Gleditsch and Ward, Correlates of War, or Polity).
+Description: Archives a large number of democracy datasets, many of historical 
+    interest. It also provides a number of functions to download these datasets 
+    (where available) and determine membership of a country in standard 
+    membership lists of the state system (according to Gleditsch and Ward, 
+    Correlates of War, or Polity).
 Authors@R: 
     person(given = "Xavier",
            family = "Marquez",
